--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -35,3 +35,4 @@
 @import "../home/eventData";
 @import "../home/UploadOption";
 @import "../home/steps/preview";
+@import "../home/steps/location";
