--- a/component/nestedComponent/home/eventData/index.scss
+++ b/component/nestedComponent/home/eventData/index.scss
@@ -1,5 +1,5 @@
 .event_data {
-    padding: 20px;
+    padding: 5px 20px 20px 20px;
     .heading {
         font-weight: 500;
         font-size: 22px;
