--- a/component/nestedComponent/home/steps/location/index.scss
+++ b/component/nestedComponent/home/steps/location/index.scss
@@ -13,20 +13,37 @@
             color: rgba(79, 79, 79, 0.43);
             font-size: 14px;
         }
-        .ant-select {
-            margin-bottom: 50px;
-            .ant-select-selector {
-                border-radius: 8px;
-            }
-            &:hover {
+        .loacation_field {
+            position: relative;
+            .ant-select {
+                margin-bottom: 50px;
                 .ant-select-selector {
-                    border-color: #f9445b !important;
+                    border-radius: 8px;
+                    input {
+                        margin-left: 20px;
+                        font-size: 15px;
+                    }
+                    .ant-select-selection-placeholder {
+                        margin-left: 20px;
+                        font-size: 15px;
+                    }
+                }
+                &:hover {
+                    .ant-select-selector {
+                        border-color: #f9445b !important;
+                    }
                 }
             }
-        }
-        .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
-            border-color: #f9445b;
-            box-shadow: unset;
+            .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
+                .ant-select-selector {
+                border-color: #f9445b;
+                box-shadow: unset;
+            }
+            .location_image {
+                position: absolute;
+                top: 0;
+                padding: 6px;
+            }
         }
     }
 }
