--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -52,5 +52,8 @@
         height: 30px;
         font-size: 14px;
         padding: unset;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
