--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -36,3 +36,4 @@
 @import "../home/UploadOption";
 @import "../home/steps/preview";
 @import "../home/steps/location";
+@import "../home/artical/index.scss";
