working on article library

--- a/component/nestedComponent/home/artical/index.scss
+++ b/component/nestedComponent/home/artical/index.scss
@@ -5,6 +5,12 @@
                 .ce-toolbar__plus {
                     color: red !important;
                 }
+                .ce-toolbox--opened {
+                    li {
+                        border: 1px solid #000;
+                        margin: 5px;
+                    }
+                }
             }
         }
     }
