--- a/component/nestedComponent/home/artical/index.scss
+++ b/component/nestedComponent/home/artical/index.scss
@@ -4,62 +4,70 @@
         .codex-editor__redactor {
             .ce-block__content {
                 .cdx-block {
-                    padding: 10px;
+                    padding-left: 15px;
                 }
             }
         }
         .ce-toolbar {
             .ce-toolbar__content {
                 .ce-toolbar__plus {
-                    border: 1.5px solid transparent;
-                    border-image-source: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
-                    border-image-slice: 1;
+                    border-right: 1.27103px solid #bfbfbf;
+                    width: 43px;
+                    height: 43px;
+                    padding: 0 3px 0 3px;
                     svg {
                         fill: #fb3e78;
-                        stroke-width: 0px;
+                        border: 1.5px solid transparent;
+                        border-image: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%) 1;
+                        border-radius: 6px;
+                        height: 33px;
+                        padding: 5px;
                         path: {
                         }
                     }
                 }
                 .ce-toolbox--opened {
+                    margin-left: 9px;
                     li {
+                        width: 33px;
+                        height: 32px;
                         margin: 5px;
                         &:nth-child(2) {
                             border: 1.5px solid transparent;
-                            border-image: linear-gradient(90deg, #c39eff 0%, #a576f3 100%);
-                            border-image-slice: 1;
+                            border-image: linear-gradient(90deg, #c39eff 0%, #a576f3 100%) 1;
+
                             svg {
                                 fill: #a576f3;
                             }
                         }
                         &:nth-child(5) {
                             border: 1.5px solid transparent;
-                            border-image: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
-                            border-image-slice: 1;
+                            border-image: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%) 1;
+
                             svg {
                                 fill: #2da6ff;
                             }
                         }
                         &:nth-child(6) {
                             border: 1.5px solid transparent;
-                            border-image: linear-gradient(98.43deg, #ff808f -16.24%, #c50018 121.79%);
-                            border-image-slice: 1;
+                            border-image: linear-gradient(98.43deg, #ff808f -16.24%, #c50018 121.79%) 1;
+
                             svg {
                                 fill: #c50018;
                             }
                         }
                         &:nth-child(4) {
                             border: 1.5px solid transparent;
-                            border-image: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
-                            border-image-slice: 1;
+                            border-image: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%) 1;
+
                             svg {
                                 fill: #3ec684;
                             }
                         }
                         &:nth-child(3) {
                             border: 1.5px solid transparent;
-                            border-image: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%);
-                            border-image-slice: 1;
+                            border-image: linear-gradient(91.59deg, #ff8452 -0.78%, #ed8438 99.22%) 1;
+
                             svg {
                                 fill: #ed8438;
                             }
