--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -2,7 +2,6 @@
     .btn {
         margin-top: 20px;
         background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
-
         width: 100px;
         border-radius: 8px;
         border: none;
@@ -55,5 +54,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+.article {
+    .btn {
+        height: 45px;
     }
 }
