implement article and feed api

--- a/component/nestedComponent/home/steps/preview/index.scss
+++ b/component/nestedComponent/home/steps/preview/index.scss
@@ -74,6 +74,9 @@
         padding: 3px;
         margin-top: 20px;
     }
+    .about_text {
+        font-size: 12px;
+    }
     .about_details {
         width: 100%;
         display: flex;
