working on article ui

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -37,3 +37,7 @@
 @import "../home/steps/preview";
 @import "../home/steps/location";
 @import "../home/artical/index.scss";
+@import "../home/steps/preview/imageFooter";
+@import "../home/artical/projectCover/projectCoverFooter";
+@import "../home/artical/publishPage";
+@import "../home/artical/projectCover";
