--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -61,3 +61,18 @@
         height: 45px;
     }
 }
+
+.projectCover {
+    .btn {
+        background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
+        border-radius: 9px;
+        border: none;
+    }
+}
+.publish_button {
+    .btn {
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        border-radius: 9px;
+        border: none;
+    }
+}
