--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -24,5 +24,5 @@
 @import "../common/modal";
 @import "../home/homePostBottom";
 @import "../home/homeEventPost";
-
 @import "../common/button";
+@import "../common/detailedImage";
