--- a/component/nestedComponent/home/artical/projectCover/projectCoverFooter/index.scss
+++ b/component/nestedComponent/home/artical/projectCover/projectCoverFooter/index.scss
@@ -1,3 +1,9 @@
 .projectFooter {
+    padding: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+        font-size: 14px;
+    }
 }
