--- a/component/re-usabelComponent/common/detailedImage/index.scss
+++ b/component/re-usabelComponent/common/detailedImage/index.scss
@@ -2,16 +2,16 @@
     display: flex;
     align-items: flex-end;
     width: 100%;
-    height: 340px;
     border-radius: 20px 20px 20px 20px;
     margin-top: 20px;
     background-size: cover;
-}
-.footer {
-    width: 100%;
-    height: 85px;
-    background: rgba(255, 255, 255, 0.75);
-    backdrop-filter: blur(30px);
-    display: flex;
-    border-radius: 0 0 17px 17px;
+    margin-bottom: 10px;
+    .footer {
+        width: 100%;
+
+        background: rgba(255, 255, 255, 0.75);
+        backdrop-filter: blur(30px);
+        display: flex;
+        border-radius: 0 0 17px 17px;
+    }
 }
