--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -77,5 +77,6 @@
         background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
         border-radius: 9px;
         border: none;
+        margin-bottom: 10px;
     }
 }
