--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -26,3 +26,5 @@
 @import "../home/homeEventPost";
 @import "../common/button";
 @import "../common/detailedImage";
+@import "../home/video";
+@import "../home/audio";
