working on feed api

--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -80,3 +80,15 @@
         margin-bottom: 10px;
     }
 }
+.event_but {
+    .btn {
+        background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
+        color: #ffffff;
+        margin-left: 10px;
+        width: 119px;
+        height: 31px;
+        border-radius: 9px;
+        border: none;
+        font-size: 12px;
+    }
+}
