--- a/component/re-usabelComponent/home/audio/index.scss
+++ b/component/re-usabelComponent/home/audio/index.scss
@@ -48,6 +48,12 @@
                 .rhap_main-controls-button {
                     color: white;
                 }
+                .rhap_rewind-button {
+                    display: none;
+                }
+                .rhap_forward-button {
+                    display: none;
+                }
             }
             .rhap_volume-controls {
                 .rhap_volume-container {
