--- a/component/nestedComponent/home/statusUpdate/index.scss
+++ b/component/nestedComponent/home/statusUpdate/index.scss
@@ -14,7 +14,7 @@
     }
     .text_color_grey {
         .ant-input {
-            color: #94a3b8;
+            // color: #94a3b8;
 
             &::placeholder {
                 color: #94a3b8;
