--- a/component/nestedComponent/home/steps/index.scss
+++ b/component/nestedComponent/home/steps/index.scss
@@ -60,6 +60,7 @@
         }
     }
     .steps_main_two {
+        margin-left: -18px;
         display: flex;
         width: 73%;
         justify-content: space-between;
