--- a/component/re-usabelComponent/home/homePostBottom/index.scss
+++ b/component/re-usabelComponent/home/homePostBottom/index.scss
@@ -136,6 +136,10 @@
                         border-radius: 50px;
                         justify-content: center;
                         align-items: center;
+                        img {
+                            width: 28px;
+                            height: 28px;
+                        }
                     }
                 }
             }
