--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -134,7 +134,11 @@
     }
 }
 
-.previewMain {
+.Main {
     width: 100%;
     padding: 40px;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
