--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -16,3 +16,4 @@
 @import "../../component/friendsList";
 @import "../../component/Trending";
 @import "../../component/search";
+@import "../../component/successfulPasswordReset";
