--- a/component/forgotPassword/forgot.module.scss
+++ b/component/forgotPassword/forgot.module.scss
@@ -98,6 +98,30 @@
       top: 50%;
       transform: translateY(-50%);
 
+      .sepratorPosition {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+        .seprator {
+          // border: 1px solid #949494;
+          padding: 0 10px 0 10px;
+          width: 50px;
+        }
+        .bottomText {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 16px;
+          color: #949494;
+          // max-width: 800px;
+          // p {
+          //   margin-top: 40px;
+          //   margin-bottom: 58px;
+          // }
+        }
+      }
+
       .loremText {
         max-width: 800px;
         font-weight: 400;
@@ -167,6 +191,14 @@
         line-height: 48px;
         margin: 30px 0;
       }
+      .textGreen {
+        color: #6fd6a4 !important;
+        font-weight: 600;
+        a {
+          text-decoration: none;
+          color: #6fd6a4 !important;
+        }
+      }
       .error {
         color: red;
         // background-color: red;
@@ -186,29 +218,45 @@
         //  display: inline-block;
         // width: 50%;
         display: flex;
+        max-width: 800px;
         // height: 56px;
-        justify-content: space-between;
-        // margin-bottom: 40px;
+        justify-content: space-around;
+        margin-bottom: 30px;
+        margin-top: 25px;
+
         // padding-right: 30px;
 
         .signin {
-          background-color: #f8f8f8;
-          // max-width: 50%;
-          // width: 100%;
-          height: 56px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
           button {
+            max-width: 800px;
+            background-color: #f8f8f8;
+            // max-width: 50%;
+            // width: 100%;
+            height: 56px;
             display: flex;
-
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            display: flex;
+            max-width: 800px;
             align-items: center;
           }
           p {
             font-weight: bold;
             margin: 0;
             padding-left: 10px;
+          }
+        }
+        .apple {
+          // background: none;
+          // border-radius: 10px;
+          // outline: olivedrab !important;
+          // border: 0.5px solid #f9445b;
+          button {
+            border: 0.5px solid #ffe9eb;
+            // border-radius: 10px;
+            background: none;
+            // border-radius: 10px;
           }
         }
       }
