--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -92,3 +92,15 @@
         font-size: 12px;
     }
 }
+
+.continue {
+    .btn {
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        border: none;
+        height: 50px;
+        font-weight: bold;
+        border-radius: 16px;
+        width: 100%;
+        margin-top: 30px;
+    }
+}
