--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -25,7 +25,7 @@
 @import "../explore/exploreTab";
 @import "../home/floatingButton";
 @import "../home/floatingOption";
-@import "../home//createPostTabs";
+@import "../home/createPostTabs";
 @import "../home/createEvent";
 @import "../home/statusUpdate";
 @import "../home/steps";
@@ -41,3 +41,5 @@
 @import "../home/artical/projectCover/projectCoverFooter";
 @import "../home/artical/publishPage";
 @import "../home/artical/projectCover";
+@import "../home/commonCreatePost/addingModal";
+@import "../home/commonCreatePost/addTag";
