--- a/component/passwordResetComponents/commonCode/index.scss
+++ b/component/passwordResetComponents/commonCode/index.scss
@@ -3,7 +3,7 @@
     margin: 0 auto;
     .imageSide {
         width: 40%;
-        background-image: url(../../public/images/login.png);
+        background-image: url(../../../public/images/login.png);
         background-size: cover;
         min-height: 100vh;
     }
@@ -17,10 +17,11 @@
             display: none;
             width: 100%;
             height: 30px;
-            background-image: url(../../public/images/login.png);
+            background-image: url(../../../public/images/login.png);
             background-size: cover;
         }
         .content {
+            width: 52%;
             .heading {
                 font-weight: 600;
                 font-size: 40px;
