working on modal

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -43,3 +43,4 @@
 @import "../home/artical/projectCover";
 @import "../home/commonCreatePost/addingModal";
 @import "../home/commonCreatePost/addTag";
+@import "../home/commonCreatePost/addAudience";
