--- a/component/nestedComponent/home/commonCreatePost/addingModal/index.scss
+++ b/component/nestedComponent/home/commonCreatePost/addingModal/index.scss
@@ -1,16 +1,17 @@
 .AddPost {
     background: none;
     .add_modal {
-        width: 457px !important;
+        // width: 457px !important;
 
         background: none !important;
 
         .ant-modal-content {
+            width: 100%;
             border-radius: 12px !important;
             margin-top: 126px;
 
             // width: 100%;
-            // height: 740px;
+            height: 450px;
             // width: 100%;
 
             .ant-modal-close {
