working on issues

--- a/component/re-usabelComponent/home/homeEventPost/index.scss
+++ b/component/re-usabelComponent/home/homeEventPost/index.scss
@@ -1,7 +1,7 @@
 .event-main {
     // display: flex;
     // width: 100%;
-    max-width: 580px;
+    // max-width: 580px;
     // width: 100%;
     border-bottom: 0.001em solid #eaeaea;
 
