--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -42,6 +42,7 @@
         }
 
         .home_post {
+            width: 100%;
             margin-top: 30px;
         }
 
@@ -110,7 +111,7 @@
     .option_float {
         position: absolute;
         bottom: 20px;
-        right: 46%;
+        right: 48%;
     }
 }
 @media screen and (max-width: 576px) {
