--- a/component/nestedComponent/home/floatingButton/index.scss
+++ b/component/nestedComponent/home/floatingButton/index.scss
@@ -2,9 +2,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 66px;
+    height: 66px;
     border-radius: 50px;
     background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
     cursor: pointer;
+}
+.rotate {
+    img {
+        transform: rotate(0);
+        transition: 0.5s;
+    }
+}
+.non_rotate {
+    img {
+        transform: rotate(136deg);
+        transition: 0.5s;
+    }
 }
