--- a/component/nestedComponent/home/statusUpdate/index.scss
+++ b/component/nestedComponent/home/statusUpdate/index.scss
@@ -40,12 +40,16 @@
         top: 0;
         width: 100%;
         height: 340px;
-        .ant-input {
-            background: none;
-            border: none;
-            box-shadow: none;
-            padding: 10px;
-            font-size: 22px;
+        .ant-form {
+            width: 100%;
+            .ant-input {
+                // width: 100%;
+                background: none;
+                border: none;
+                box-shadow: none;
+                // padding: 10px;
+                font-size: 22px;
+            }
         }
     }
 }
