--- a/component/nestedComponent/home/storySlider/createStory/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/index.scss
@@ -1,12 +1,47 @@
 .CreateStory_main {
+    border: 3px solid #cf172d;
+    border-radius: 15px;
     width: 89px;
     height: 120px;
     cursor: pointer;
     transition: transform 0.3s;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0px 4px 6px 0px #0000002e;
+
     &:hover {
         -ms-transform: scale(1.1);
         -webkit-transform: scale(1.1);
         transform: scale(1.1);
+    }
+    .background {
+        width: 89px;
+        height: 88px;
+        img {
+            margin-left: -1px !important;
+        }
+    }
+    .footer_create {
+        background-color: #ffffff;
+        display: flex;
+        justify-content: center;
+        height: 32px;
+
+        p {
+            font-weight: 600;
+            font-size: 10px;
+            color: #010010;
+            margin-top: 7px;
+        }
+    }
+    .plus_icon {
+        position: absolute;
+        top: 65px;
+        left: 28px;
+        // img {
+        //     width: 28px;
+        //     height: 28px;
+        // }
     }
 }
 
