--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -8,6 +8,8 @@
     //     border: 1px solid #000;
     // }
     .left-side {
+        overflow: auto;
+
         // position: fixed;
         // left: 10px;
         // position: fixed;
@@ -18,6 +20,8 @@
         // max-height: 100vh;
         flex-direction: column;
         align-items: center;
+        margin: 0px 10px 0px 10px;
+
         // margin: 0px 10px 0px 10px;
         // justify-content: center;
         // justify-content:space-between;
@@ -35,7 +39,7 @@
 
         .status {
             margin-top: 10px;
-            width: 95%;
+            // width: 95%;
             // max-width: 580px;
             // width: 100%;
             // margin-left: 40px;
@@ -52,11 +56,13 @@
         }
     }
     .right-side {
-        right: 20%;
-        width: 22%;
-        position: fixed;
+        width: 40%;
+        overflow: auto;
+
         // height: 100vh;
         // overflow: scroll;
+        margin: 0px 40px 0px 10px;
+
         // margin: 0px 40px 0px 10px;
         // position: fixed;
         // right: -40px;
@@ -76,13 +82,16 @@
         //     }
         // }
         .sponsoreds_main {
+            margin-top: 35px;
+        }
+        .show_trending_main {
             margin-top: 30px;
         }
     }
     .button_float {
-        position: fixed;
-        bottom: 46px;
-        right: 43%;
+        position: absolute;
+        bottom: 20px;
+        right: 40%;
     }
     .option_float {
         position: absolute;
