--- a/component/nestedComponent/home/homeSponsored/sponsoredPost/index.scss
+++ b/component/nestedComponent/home/homeSponsored/sponsoredPost/index.scss
@@ -6,6 +6,7 @@
     .sponsored_image {
         width: 50%;
         height: 100%;
+        margin-right: 10px;
     }
     .text_contant {
         .text {
