--- a/component/re-usabelComponent/home/homePostBottom/index.scss
+++ b/component/re-usabelComponent/home/homePostBottom/index.scss
@@ -1,5 +1,8 @@
 .bottom {
     padding: 12px 0 0 15px;
+    display: flex;
+    max-width: 330px;
+    justify-content: space-between;
     // max-width: 580px;
     // width: 100%;
     // display: flex;
