--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -54,8 +54,17 @@
     //     height: 150px !important;
     // }
 }
+// @media screen and (max-width: 1221px) {
+//     .hide4 {
+//         // display: none !important;
+//     }
+//     // .story_main {
+//     //     width: 135px !important;
+//     //     height: 170px !important;
+//     // }
+// }
 @media screen and (max-width: 1221px) {
-    .hide4 {
+    .hide3 {
         display: none !important;
     }
     // .story_main {
@@ -65,6 +74,15 @@
 }
 @media screen and (max-width: 1221px) {
     .hide3 {
+        display: none !important;
+    }
+    // .story_main {
+    //     width: 135px !important;
+    //     height: 170px !important;
+    // }
+}
+@media screen and (max-width: 1440px) {
+    .hide5 {
         display: none !important;
     }
     // .story_main {
