--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -85,8 +85,8 @@
         right: 43%;
     }
     .option_float {
-        position: absolute;
-        bottom: 20px;
+        position: fixed;
+        bottom: 46px;
         right: 48%;
     }
 }
