--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -6,6 +6,8 @@
     background: white !important;
     .ant-layout {
         background: white;
+        margin-top: 15px;
+        overflow: scroll;
 
         // display: flex;
     }
@@ -506,6 +508,8 @@
     .Container {
         margin: 0 auto;
         max-width: 1158px;
+        width: 80%;
+        // min-width: 500px;
         display: flex;
         align-items: center;
         // min-height: 964px;
@@ -547,7 +551,7 @@
             // padding: 50px 0px;
             max-width: 60%;
             height: 97vh;
-            padding-top: 20px;
+            padding-top: 10px;
             // border: 1px solid rgba(0, 0, 0, 0.07);
             // border-radius: 20px;
             // box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.07);
