--- a/component/nestedComponent/home/storySlider/createStory/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/index.scss
@@ -1,7 +1,8 @@
 .CreateStory_main {
+    max-width: 89px;
+    min-width: 80px;
     border: 3px solid #cf172d;
-    border-radius: 15px;
-    width: 89px;
+    border-radius: 16px;
     height: 120px;
     cursor: pointer;
     transition: transform 0.3s;
