--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -1,5 +1,6 @@
 .story_main {
-    width: 89px;
+    max-width: 89px;
+    min-width: 80px;
     height: 120px;
     // width: 100%;
     box-shadow: 0px 4px 6px 0px #0000002e;
