--- a/component/nestedComponent/search/autoComplete/index.scss
+++ b/component/nestedComponent/search/autoComplete/index.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     margin: 30px 0 30px 0;
-    padding-right: 125px;
+    // padding-right: 125px;
 
     .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
         border-color: red !important;
